correct text grammar and correct bugs

--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -5,8 +5,8 @@
         <div class="contact-info">
             <h2>Contactez-moi!</h2>
             <p>
-              Vous avez un projet, une question, ou juste envie de dire bonjour?
-              Remplissez ce formulaire ou contactez-moi sur mes réseaux!
+                Envie de lancer le prochain grand projet ou de parler de la dernière techno à la mode ? Remplissez le formulaire ou
+                faites-moi signe sur les réseaux. Promis, je réponds plus vite qu'un script bien optimisé.
             </p>
 
             <div class="links">
@@ -46,7 +46,7 @@
                 <!-- Line 3: Message -->
                 <div class="row">
                     <div class="field full">
-                        <textarea rows="5" placeholder="Ecris ton message..." formControlName="message"></textarea>
+                        <textarea rows="5" placeholder="Écris ton message..." formControlName="message"></textarea>
                     </div>
                 </div>
 
