--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -47,7 +47,7 @@
                 // text-decoration: underline;
                 color: black;
                 border-bottom: solid 3px black;
-                font-weight: bolder;
+                // font-weight: bolder;
             }
         }
 
