--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -43,6 +43,10 @@
             text-align: center;
         }
 
+        p {
+            text-indent: 2rem;
+        }
+
         @include responsive($sm) {
             grid-column: 1 / -1;
             grid-template-rows: auto;
@@ -52,6 +56,7 @@
             }
 
             h1, p {
+                
                 margin-left: 2rem;
                 margin-right: 2rem;
             }
@@ -94,7 +99,7 @@
     }
 
 
-    #frise-container {
+    .frise-container {
         grid-column: 1 / -1;
         transform: translate(0, -130px);
 
@@ -128,6 +133,10 @@
         grid-column: 1 / 6;
         margin: auto;
 
+        p:first-child {
+            text-indent: 2rem;
+        }
+              
         p {
             margin-left: 2rem;
             margin-right: 2rem;
