--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,21 +1,21 @@
-<section id="banner-container">
-    <img id="background" src="assets/images/home/river_forest.jpg" alt="" />
-    <img id="background-shadow" src="assets/images/home/background_lum.png" alt="" />
-    <div id="logo-container">
-        <img id="hozen-logo" src="assets/logos/hozen_emacs_logo_zen.png" alt="" />
+<section class="banner-container">
+    <img class="background" src="assets/images/home/river_forest.jpg" alt="" />
+    <img class="background-shadow" src="assets/images/home/background_lum.png" alt="" />
+    <div class="logo-container">
+        <img class="hozen-logo" src="assets/logos/hozen_emacs_logo_zen.png" alt="" />
     </div>
 </section>
-<section id="resume-container">
-    <div id="resume">
+<section class="resume-container">
+    <div class="resume">
         <div class="profil-container">
-            <img id="profil" src="assets/images/home/photo_profil.jpg" alt="" />
+            <img class="profil" src="assets/images/home/photo_profil.jpg" alt="" />
         </div>
-        <div id="presentation">
+        <div class="presentation">
             <h1 class="white">Enzo "Hozen" Durel</h1>
             <p class="white">
                 Salut, moi c’est Enzo. Enfant, je passais mon temps à imaginer des machines incroyables : je voulais
                 être inventeur,
-                créer des objets de mes mains pour changer un peu le monde à mon échelle. Après avoir parcouru la
+                créer des objets de mes mains pour changer un peu le monde. Après avoir parcouru la
                 France, le Japon
                 et les États-Unis pour me former, je me suis rendu compte que mes outils avaient simplement changé.
             </p>
@@ -29,7 +29,7 @@
         </div>
         <app-timeline urlEvent="assets/data/timeline.json" class="frise-container" dotBgColor="#eee" dotBorderColor="#647F92"
             curveColor="#bbb"> </app-timeline>
-        <div id="paragraph-container">
+        <div class="paragraph-container">
             <p>
                 Je suis animé par une soif constante d’apprendre, de comprendre et de chercher ce qui est juste.
                 Passionné par la créativité sous toutes ses formes, j’aime m’immerger dans une œuvre pour y déceler
@@ -45,7 +45,7 @@
                 qui ont bâti mon parcours et qui définissent aujourd’hui celui que je suis.
             </p>
         </div>
-        <div id="photos-container">
+        <div class="photos-container">
             <img src="assets/images/home/photo_groupe_pr.jpg" alt="" />
             <img src="assets/images/home/photo_groupe_run.jpg" alt="" />
             <img src="assets/images/home/photo_groupe_graduate.jpg" alt="" />
@@ -54,7 +54,7 @@
     </div>
 </section>
 
-<section id="links-container">
+<section class="links-container">
     <div class="round-border">
         <svg viewBox="0 30 1440 320" preserveAspectRatio="none" height="300px" width="100%"
             xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
             </path>
         </svg>
     </div>
-    <div id="links">
+    <div class="links">
         <a class="link-card" routerLink="/portfolio">
             <img src="assets/logos/portfolio_logo.png" alt="" />
         </a>
