--- a/src/app/components/contact/contact.scss
+++ b/src/app/components/contact/contact.scss
@@ -11,13 +11,14 @@ $link-color: white;
 $input-border-color: #C1C1C1;
 $input-bg-color: white;
 
+$contact-form-max-width: 600px;
+
 .contact-section {
     min-height: 400px;
     background-color: $contact-bg;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem 1rem;
     color: $font-color-alt;
 }
 
@@ -27,7 +28,6 @@ $input-bg-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 40px;
 
     @include responsive($sm) {
         flex-direction: column;
@@ -36,11 +36,32 @@ $input-bg-color: white;
 
 /* FORM */
 .contact-form {
-    background: $form-bg;
-    padding: 40px;
-    border-radius: 12px;
-    max-width: 600px;
-    margin: auto;
+    width: 100%;
+    max-width: $contact-form-max-width;
+    margin: 2rem 0;
+    margin-right: 1rem;
+
+    form {
+        background: $form-bg;
+        padding: 40px;
+        border-radius: 12px;
+
+        @include responsive($contact-form-max-width) {
+            border-radius: 0;
+        }
+    }
+
+    @include responsive($sm) {
+        margin-right: 0;
+    }
+
+    @include responsive($contact-form-max-width) {
+        margin-bottom: 0;
+        
+        form {
+            border-radius: 0;
+        }
+    }
 }
 
 .row {
@@ -48,7 +69,7 @@ $input-bg-color: white;
     gap: 16px;
     margin-bottom: 20px;
 
-    @include responsive($xxs) {
+    @include responsive($xs) {
         flex-direction: column;
     }
 }
@@ -106,6 +127,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 2rem;
 }
 
 .contact-info h2 {
