add all pages responsive

--- a/src/app/components/exppro/exppro.html
+++ b/src/app/components/exppro/exppro.html
@@ -4,7 +4,7 @@
   <section class="exppros-section">
     @for (item of expproItems(); track item.id) {
     <section class="exppro-item">
-      <h3>{{item.name}} - {{item.company}}</h3>
+      <h3 class="title">{{item.name}} - {{item.company}}</h3>
       <div class="subtitle">
         <h4 class="poste">{{item.poste}}</h4>
         <section class="tags">
