--- a/src/app/components/competences/competences.scss
+++ b/src/app/components/competences/competences.scss
@@ -1,3 +1,5 @@
+@use "../../styles/shared.scss" as *;
+
 $comp-max-width: 1200px;
 $comp-icon-dim: 20px;
 
@@ -14,32 +16,44 @@ $comp-icon-dim: 20px;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: auto auto;
-    grid-gap: 2rem;
+    grid-gap: 2em;
 
     max-width: $comp-max-width;
-    padding: 2rem;
+    padding: 2em;
     padding-top: 0;
     margin: auto;
 
+    @include responsive($mobile) {
+        grid-template-columns: auto;
+    }
+
     ul, p {
-        margin: .3rem 0;
+        margin: .3em 0;
     }
 
     ul {
         padding-left: 1rem;
     }
 
+    .technicals-container {
+        display: flex;
+        flex-direction: column;
+    }
+
     .technicals {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-auto-rows: auto;
-        flex-direction: column;
-        flex-flow: column wrap;
+        margin: .5em;
 
         .technical {
             display: flex;
             align-items: center;
             gap: 1rem;
+        }
+
+        @include responsive($mobile) {
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
         }
 
     }
