--- a/src/app/pages/portfolio/portfolio.scss
+++ b/src/app/pages/portfolio/portfolio.scss
@@ -18,8 +18,10 @@ $button-bg-hover: #CCC;
     align-items: center;
 
     h1 {
-        margin: 8rem;
-        font-size: 48px;
+        align-self: center;
+        margin: 8rem 0;
+        max-width: 100%;
+        font-size: 300%;
         font-weight: lighter;
         text-shadow: #EEE 0 .5rem 0px;
     }
@@ -31,6 +33,7 @@ $button-bg-hover: #CCC;
         justify-content: center;
         // margin-bottom: 24px;
         background: $button-bg;
+        flex-wrap: wrap;
 
         button {
             padding: 8px 14px;
