--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -13,7 +13,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 3rem;
+    height: 50px;
     z-index: 2;
     background: rgba(255, 255, 255, 0.7);
     color: #555;
@@ -38,15 +38,15 @@
             padding: 0;
         }
 
-        a {
+        nav a {
             color: inherit;
             text-decoration: none;
-            padding: .5rem 1rem;
+            padding: 10px 1em;
 
             &:hover {
                 // text-decoration: underline;
                 color: black;
-                border-bottom: solid 3px black;
+                border-bottom: solid 4px black;
                 // font-weight: bolder;
             }
         }
@@ -64,11 +64,14 @@
 
         // Logo section style
         nav.center {
+            display: flex;
             align-items: center;
             justify-content: center;
 
             .logo {
-                max-height: 3em;
+                margin: 5px;
+                max-height: 40px;
+                box-sizing: border-box;
             }
         }
 
@@ -88,9 +91,13 @@
         }
 
         // Réorganisation Mobile
-        @include responsive($sm) {
+        @include responsive($mobile) {
             display: flex;
             justify-content: space-between; // Logo à gauche, Burger à droite
+
+            .logo {
+                max-width: 60%;
+            }
             
             .burger-btn {
                 order: 2;
@@ -124,9 +131,17 @@
     }
 
     a {
-        font-size: 1.5rem;
-        padding: 1rem;
         width: 100%;
         text-align: center;
+        color: inherit;
+        text-decoration: none;
+        padding: 10px 1em;
+
+        &:hover {
+            // text-decoration: underline;
+            background-color: #dfdfdf;
+            border: none;
+            // font-weight: bolder;
+        }
     }
 }
