--- a/src/app/styles/shared.scss
+++ b/src/app/styles/shared.scss
@@ -4,6 +4,8 @@ $font-color-alt: white;
 $dark-blue: #263A55;
 $light-gray: #EEEEEE;
 
+$input-error-color: #ff4d4d;
+
 $content-width: 1260px;
 
 $xxs: 480px;
