--- a/src/app/components/contact/contact.scss
+++ b/src/app/components/contact/contact.scss
@@ -72,39 +72,48 @@ $contact-form-max-width: 600px;
     @include responsive($xs) {
         flex-direction: column;
     }
-}
 
-.row:last-child {
-    margin-bottom:0;
+    &:last-child {
+        margin-bottom:0;
+    }
 }
 
 .field {
     display: flex;
     flex-direction: column;
     flex: 1;
-}
 
-.field.full {
-    flex: 100%;
+    input, textarea {
+        padding: 12px;
+        border-radius: 6px;
+        border: 1px solid $input-border-color;
+        font-size: 14px;
+        background-color: $input-bg-color;
+        transition: border-color 0.3s ease;
+        &.error {
+            border: 1px solid $input-error-color;
+        }
+    }
+
+    textarea {
+        min-height: 10em;
+        resize: none;
+    }
+
+    small {
+        color: $input-error-color;
+        font-size: 0.8rem;
+        margin-top: 4px;
+    }
+
+    &.full {
+        flex: 100%;
+    }
 }
 
 label {
     font-size: 14px;
     margin-bottom: 6px;
-}
-
-input,
-textarea {
-    padding: 12px;
-    border-radius: 6px;
-    border: 1px solid $input-border-color;
-    font-size: 14px;
-    background-color: $input-bg-color;
-}
-
-textarea {
-    min-height: 10em;
-    resize: none;
 }
 
 button {
@@ -117,10 +126,15 @@ button {
     font-weight: 600;
     transition: background 0.1s;
     margin: auto;
-}
 
-button:hover {
-    background-color: $send-button-bg-hover;
+    &:hover {
+        background-color: $send-button-bg-hover;
+    }
+    &:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+        opacity: 0.7;
+    }
 }
 
 .contact-info {
@@ -128,20 +142,20 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     margin: 2rem;
-}
 
-.contact-info h2 {
-    font-size: 32px;
-    margin-bottom: 12px;
-    margin-top: 0;
-}
+    h2 {
+        font-size: 32px;
+        margin-bottom: 12px;
+        margin-top: 0;
+    }
 
-.contact-info p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
-    line-height: 1.6;
-    color: $font-color-alt;
+    p {
+        margin-top: 0;
+        margin-bottom: 1rem;
+        margin-right: 1rem;
+        line-height: 1.6;
+        color: $font-color-alt;
+    }
 }
 
 .links {
